@@ -1,3 +1,10 @@
+2012-12-25 Borut Razem <borut.razem AT gmail.com>
+
+	* src/pic14/gen.c, src/pic14/main.c:
+	  applied patch #3193179 - "pic14 naked ISR handler"
+	  implementing RFE #1432077 - "naked for pic14",
+	  thanks to Wolfgang Jung
+
 2012-12-20 Philipp Klaus Krause <pkk AT spth.de>
 
 	* support/regression/tests/frexpf.c:
